Se suma archivo readme y gitignore

--- a/notebooks/prueba.ipynb
+++ b/notebooks/prueba.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8a3f797f",
    "metadata": {},
    "outputs": [
@@ -471,7 +471,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pokemon-etl-py3.11",
+   "display_name": "pokemon-etl-ArqaS2vZ-py3.11",
    "language": "python",
    "name": "python3"
   },
